--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
-  "private": true,
-  "displayName": "Plugin Name",
-  "name": "homebridge-plugin-name",
-  "version": "1.0.0",
-  "description": "A short description about what your plugin does.",
+  "displayName": "Homebridge Nest Thermostat",
+  "name": "homebridge-nest-thermostat",
+  "version": "1.0.2",
+  "description": "Homebridge plugin for Nest Learning Thermostat.",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "git://github.com/USERNAME/GITHUB_PROJECT_NAME.git"
+    "url": "git://https://github.com/syntheticencounters/homebridge-nest-thermostat.git"
   },
   "bugs": {
-    "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME/issues"
+    "url": "https://github.com/syntheticencounters/homebridge-nest-thermostat/issues"
   },
   "engines": {
     "node": ">=14.18.1",
-    "homebridge": ">=1.3.5"
+    "homebridge": ">=1.3.0"
   },
   "main": "dist/index.js",
   "scripts": {
@@ -26,16 +25,22 @@
   "keywords": [
     "homebridge-plugin"
   ],
-  "dependencies": {},
   "devDependencies": {
     "@types/node": "^16.10.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
-    "homebridge": "^1.3.5",
+    "homebridge": "^1.3.0",
     "nodemon": "^2.0.13",
     "rimraf": "^3.0.2",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "@google-cloud/pubsub": "^2.19.0",
+    "axios": "^0.26.0",
+    "node-fetch": "^2.6.7",
+    "path": "^0.12.7",
+    "querystring": "^0.2.1"
   }
 }
